--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,10 +1,12 @@
 {{ if ne .chezmoi.os "windows" }}
 .chezmoiscripts/windows/**
 Documents
+AppData
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
 .chezmoiscripts/linux/**
 dot_bashprofile
 dot_bashrc
+dot_config
 {{ end }}
