--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,6 +6,7 @@ packages:
       - Microsoft.VisualStudioCode
     dev:
       - astral-sh.uv
+      - Rustlang.Rustup
     cli: 
       - rsteube.Carapace
       - Starship.Starship
