--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -1,9 +1,8 @@
 packages:
   winget:
-    core:
+    base:
       - Git.Git
-      - Microsoft.WindowsTerminal
-      - Microsoft.VisualStudioCode
+      - Docker.DockerDesktop
     dev:
       - astral-sh.uv
       - Rustlang.Rustup
@@ -22,6 +21,15 @@ packages:
       - Gyan.FFmpeg # dep of vhs
       - tsl0922.ttyd # dep of vhs
       - Typst.Typst
+    gui: 
+      - Microsoft.VisualStudioCode
       - AnyAssociation.Anytype
       - Martchus.syncthingtray
       - KeePassXCTeam.KeePassXC
+      - Microsoft.WindowsTerminal
+  flatpak:
+    gui: 
+      - com.visualstudio.code
+      - io.anytype.anytype
+      - io.github.martchus.syncthingtray
+      - org.keepassxc.KeePassXC
